--- a/portfolio.html
+++ b/portfolio.html
@@ -259,6 +259,18 @@
 						</li>
 					</ul>
 				</div>
+				<div class="footer-form-container">
+					<b class="footer-form-title">Підпишіться на розсилку</b>
+					<form class="footer-form">
+						<input type="email" class="input-email" placeholder="E-mail" name="email" />
+						<button type="submit" class="btn-form">
+							Підписатися
+							<svg class="footer-form-icon" width="24" height="24">
+								<use href="./images/symbol-defs (2).svg#icon-icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
 	</body>
