--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 							</svg>
 						</label>
 					</div>
-					<label class="modal-label">
+					<label class="modal-label textarea-retreat">
 						<span>Коментар</span>
 						<textarea name="coment" rows="5" class="modal-textarea" placeholder="Введіть текст"></textarea>
 					</label>
